# OpenGLGraphics

./: CMakeLists.txt  README.md  glad.c  main.cpp
Libraries/include/glad/: glad.h
Object/: Object.cpp  Object.h
Shader/: Shader.cpp  Shader.h  default.frag  default.vert
Shader/ElementBuffer/: ElementBuffer.cpp  ElementBuffer.h
Shader/VertexArray/: VertexArray.cpp  VertexArray.h
Shader/VertexBuffer/: VertexBuffer.cpp  VertexBuffer.h
Window/: Window.cpp  Window.h
